--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "gh-pages": "^3.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.3",
     "react-strap": "^0.0.1",
     "reactstrap": "^8.4.1"
   },
