added tailwind css and made styles better

--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.11.3",
-    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "autoprefixer": "9",
     "axios": "^0.21.1",
     "next": "latest",
+    "postcss": "7",
+    "postcss-preset-env": "^6.7.0",
     "react": "latest",
-    "react-dom": "latest"
+    "react-dom": "latest",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat"
   },
   "scripts": {
     "dev": "next dev",
