--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "postcss-preset-env": "^6.7.0",
     "react": "latest",
     "react-dom": "latest",
+    "react-icons": "^4.2.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat"
   },
   "scripts": {
